fixed hrefs and alignment of facebook icon

--- a/style.css
+++ b/style.css
@@ -58,26 +58,29 @@ button {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 400px));
-    grid-gap: 20px;
+    grid-gap: 10px;
     justify-content: center;
-    margin: 20px;
+    align-items:center;
+    margin: 10px;
 }
 .grid-item {
-    background-colr: darkgray;
+    background-color: darkgray;
     border: solid 3px black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 .photo {
     width:200px;
     height: 300px;
     justify-content: center;
+    align-items:center;
 }
 .photo img {
     width: 100%;
     height: 100%;
-    
     object-fit: contain;
+    align-items:center;
+    
 }
 table, th, td {
     background-color: white;
@@ -96,6 +99,11 @@ td {
 }
 .inline-block {
     display: inline-block;
+}
+#facebook-icon {
+    border: none; 
+    margin: 0; 
+    padding: 0;
 }
     footer {
     background-color:blueviolet;
